AM_LDFLAGS = $(top_srcdir)/.libs/libtap.la -static

noinst_PROGRAMS = cmpok diesok is like notediag simple skip synopsis todo

cmpok_SOURCES = cmpok.c
diesok_SOURCES = diesok.c
is_SOURCES = is.c
like_SOURCES = like.c
notediag_SOURCES = notediag.c
simple_SOURCES = simple.c
skip_SOURCES = skip.c
todo_SOURCES = todo.c
